# clamavc

./: .gitignore  Makefile  Makefile.am  NEWS  README  acinclude.m4  configure.ac
data/: .gitignore  Makefile  README  invert-file.c
doc/: clamavc.1  clamavc.3
examples/: clamavc-common.c  clamavc-common.h  clamavc-instream.c
include/: clamavc.h
lib/: clamavc.h  libclamavc.c  libclamavc.sym  mod_clamavc.c
src/: clamavc-common.c  clamavc-common.h  clamavc-contscan.c  clamavc-instream.c  clamavc-multiscan.c  clamavc-reload.c  clamavc-scan.c  clamavc-shutdown.c  clamavc.c  clamavclient.c
tests/: common.c  common.h  connect.c  contscan-clean.c  contscan-infected.c  idsession-all.c  instream-chunked.c  instream-fildes-chunked.c  instream-fildes.c  instream-file-chunked.c  instream-file.c  instream.c  multiscan.c  ping.c  reload.c  scan.c  version.c
